--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -12,13 +12,13 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="#">MELISSA | <i>LOTHOLZ</i></a>
+            <a class="navbar-brand" href="{% url 'index' %}">MELISSA | <i>LOTHOLZ</i></a>
           
             <div>
               <ul class="navbar-nav  mr-auto ">
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Meet Melissa</a>
+                  <a class="nav-link" href="{% url 'meet' %}">Meet Melissa</a>
                 </li>
                 
                 <li class="nav-item">
