--- a/melissa/mel_site/templates/mel_site/meet_mel.html
+++ b/melissa/mel_site/templates/mel_site/meet_mel.html
@@ -3,62 +3,78 @@
 
 {% block body %}
 
+<div class="title">
 
-<h1>Meet Melissa</h1>
+  <h1 class="display-1">MEET MELISSA</h1>
+</div>
+
 
 <div class="image-container card-group">
 
-    <div class="flex-card row">
-        <div class="col-6 picture">
-            <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 text  ">
-            Here is the textt hat will go beside the image
-        </div>
+  <div class="flex-card row justify-content-center">
+    <div class="col-md-3 picture rotate-left">
+      <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
+      <div class="caption">
+        <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+      </div>
+    </div>
+  
+    <div class="col-md-8 text">
+      <h2>LIFE AS AN ADVENTURE </h2>
+      <p>
+        I see life as an adventure - like a hike that we kind of have a road map for but truth be told we are all figuring out along the way. For me, God is my adventure guide leading me, pointing out the path to take, encouraging me, challenging me and inviting me to step out and up along the way. Sometimes there are tough climbs. Sometimes we must go down before we can go up. Sometimes we get to enjoy the most wonderful and rewarding views along the way. Regardless, there is so much to take in and experience and learn along the way, and we are only better for the journey!
+      </p>
+    </div>
+  </div>
+
+  <div class="flex-card row justify-content-center">
+    <div class="col-md-8 text">
+      <h2>LIFE AS AN ADVENTURE </h2>
+      <p>
+        I see life as an adventure - like a hike that we kind of have a road map for but truth be told we are all figuring out along the way. For me, God is my adventure guide leading me, pointing out the path to take, encouraging me, challenging me and inviting me to step out and up along the way. Sometimes there are tough climbs. Sometimes we must go down before we can go up. Sometimes we get to enjoy the most wonderful and rewarding views along the way. Regardless, there is so much to take in and experience and learn along the way, and we are only better for the journey!
+      </p>
     </div>
 
-    <div class="flex-card row">
-        <div class="col-6 picture">
-            <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 text">
-            Here is the textt hat will go beside the image
-        </div>
+    <div class="col-md-3 picture rotate-right">
+      <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
+      <div class="caption">
+        <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="flex-card row justify-content-center">
+    <div class="col-md-3 picture rotate-left">
+      <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
+      <div class="caption">
+        <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+      </div>
+    </div>
+  
+    <div class="col-md-8 text">
+      <h2>LIFE AS AN ADVENTURE </h2>
+      <p>
+        I see life as an adventure - like a hike that we kind of have a road map for but truth be told we are all figuring out along the way. For me, God is my adventure guide leading me, pointing out the path to take, encouraging me, challenging me and inviting me to step out and up along the way. Sometimes there are tough climbs. Sometimes we must go down before we can go up. Sometimes we get to enjoy the most wonderful and rewarding views along the way. Regardless, there is so much to take in and experience and learn along the way, and we are only better for the journey!
+      </p>
+    </div>
+  </div>
+
+  <div class="flex-card row justify-content-center">
+    <div class="col-md-8 text">
+      <h2>LIFE AS AN ADVENTURE </h2>
+      <p>
+        I see life as an adventure - like a hike that we kind of have a road map for but truth be told we are all figuring out along the way. For me, God is my adventure guide leading me, pointing out the path to take, encouraging me, challenging me and inviting me to step out and up along the way. Sometimes there are tough climbs. Sometimes we must go down before we can go up. Sometimes we get to enjoy the most wonderful and rewarding views along the way. Regardless, there is so much to take in and experience and learn along the way, and we are only better for the journey!
+      </p>
     </div>
 
-    <div class="flex-card row">
-        <div class="col-6 picture">
-            <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 text">
-            Here is the textt hat will go beside the image
-        </div>
+    <div class="col-md-3 picture rotate-right">
+      <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
+      <div class="caption">
+        <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+      </div>
     </div>
-
-    <div class="flex-card row">
-        <div class="col-6 picture">
-            <img src="/static/mel_site/tobaggan.jpg" alt="Melissa with a tobaggan" style="width:100%">
-            <div class="caption">
-              <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 text">
-            Here is the textt hat will go beside the image
-        </div>
-    </div>
+  </div>
 
 </div>
 
