Added some content under carousel on homepage

--- a/melissa/mel_site/static/mel_site/home_styles.css
+++ b/melissa/mel_site/static/mel_site/home_styles.css
@@ -26,8 +26,12 @@ a.carousel-control-next:hover {
 
 a.carousel-control-prev:hover{
     background-image: linear-gradient(to left, rgba(250, 0, 0, 0) 0px,  rgba(0, 0, 0, 0.5) 100%);
-   }
+}
 
+
+.space{
+    padding: 100px;
+}
 
 html, body{
     height: 100%;
