--- a/melissa/mel_site/templates/mel_site/index.html
+++ b/melissa/mel_site/templates/mel_site/index.html
@@ -5,70 +5,69 @@
 
 <div id="demo" class=" carousel slide text-center" data-ride="carousel">
 
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-      <li data-target="#demo" data-slide-to="0" class="active"></li>
-      <li data-target="#demo" data-slide-to="1"></li>
-      <li data-target="#demo" data-slide-to="2"></li>
-    </ul>
-  
-    <div class=""></div>
-    <!-- The slideshow -->
-    <div class="carousel-inner">
-      <div class="carousel-item  active">
-        <img class ="" src="/static/mel_site/home_background.jpg" alt="Bobsleigh Start">
-        <div class="carousel-caption">
-            <div class="background-img">
-                <h1 class="">MELISSA | <i>LOTHOLZ</i></h1>
-                <h2 class="">SLEIGH <i>all</i> DAY</h2>
-            </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="/static/mel_site/hear_story.jpg" alt="Melissa holding plant">
-        <div class="carousel-caption">
-            <div class="background-img">
-                <h1 class="">HEAR | <i>THE STORY</i></h1>
-            </div>
-        </div>
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
 
-      </div>
-      <div class="carousel-item">
-        <img src="/static/mel_site/home_background.jpg" alt="Bobsleigh Start">
-        <div class="carousel-caption">
-            <div class="background-img">
-                <h1 class="">MELISSA | <i>LOTHOLZ</i></h1>
-                <h2 class="">SLEIGH <i>all</i> DAY</h2>
-            </div>
-        </div>
+  <div class=""></div>
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item  active">
+      <img class ="" src="/static/mel_site/home_background.jpg" alt="Bobsleigh Start">
+      <div class="carousel-caption">
+          <div class="background-img">
+              <h1 class="">MELISSA | <i>LOTHOLZ</i></h1>
+              <h2 class="">SLEIGH <i>all</i> DAY</h2>
+          </div>
       </div>
     </div>
-  
-    <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </a>
-  
+    <div class="carousel-item">
+      <img src="/static/mel_site/hear_story.jpg" alt="Melissa holding plant">
+      <div class="carousel-caption">
+          <div class="background-img">
+              <h1 class="">HEAR | <i>THE STORY</i></h1>
+          </div>
+      </div>
+
+    </div>
+    <div class="carousel-item">
+      <img src="/static/mel_site/home_background.jpg" alt="Bobsleigh Start">
+      <div class="carousel-caption">
+          <div class="background-img">
+              <h1 class="">MELISSA | <i>LOTHOLZ</i></h1>
+              <h2 class="">SLEIGH <i>all</i> DAY</h2>
+          </div>
+      </div>
+    </div>
   </div>
 
-
-
-
-
-
-
-
-<div class=""  hidden="true">
-    <div class="background-img flex-center ">
-        <h1 class="display-1">MELISSA | <i>LOTHOLZ</i></h1>
-        <h2 class="display-3">SLEIGH <i>all</i> DAY</h2>
-    
-    </div>
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
 
 </div>
+
+<div id="bio-summary" class="container space">
+
+  <p>
+    Melissa has represented Canada on the world stage in the sport of bobsleigh since 2014. 
+    Following her 2018 Olympic debut Melissa choose to take on a new challenge, transitioning from her role as brakeman to pilot, with hopes of working back up to the World Cup circuit and qualifying for the 2022 Olympics in this new position. For more information on current season scheduling and results please sign up for the #SLEIGHALLDAY newsletter or visit https://www.ibsf.org/en/races-results
+  </p>
+
+</div>
+
+
+
+
+
+
 
 
 
