Added font awesome to project and added social section on homepage.

--- a/melissa/mel_site/static/mel_site/home_styles.css
+++ b/melissa/mel_site/static/mel_site/home_styles.css
@@ -33,6 +33,18 @@ a.carousel-control-prev:hover{
     padding: 100px;
 }
 
+
+.award-item{
+    min-width: 175px;
+    margin: 25px;
+}
+
+a {
+    color: inherit;
+    text-decoration: inherit;
+    cursor: inherit;
+  }
+
 html, body{
     height: 100%;
 }
