--- a/melissa/mel_site/templates/mel_site/index.html
+++ b/melissa/mel_site/templates/mel_site/index.html
@@ -56,10 +56,50 @@
 
 <div id="bio-summary" class="container space">
 
-  <p>
+  <p class="text">
     Melissa has represented Canada on the world stage in the sport of bobsleigh since 2014. 
     Following her 2018 Olympic debut Melissa choose to take on a new challenge, transitioning from her role as brakeman to pilot, with hopes of working back up to the World Cup circuit and qualifying for the 2022 Olympics in this new position. For more information on current season scheduling and results please sign up for the #SLEIGHALLDAY newsletter or visit https://www.ibsf.org/en/races-results
   </p>
+
+  <div class="card-deck">
+    <div class="card bg-light award-item">
+      <div class="card-body text-center">
+        <h4 class="card-title">OLYMPICS</h4>
+        <h3 class="card-text display-4">1</h3>
+      </div>
+    </div>
+    <div class="card bg-light award-item">
+      <div class="card-body text-center">
+        <h4 class="card-title">CRSYTAL GLOBES</h4>
+        <h3 class="card-text display-4">4</h3>
+      </div>
+    </div>
+    <div class="card bg-light award-item">
+      <div class="card-body text-center">
+        <h4 class="card-title">WORLD CHAMPS MEDALS</h4>
+        <h3 class="card-text display-4">2</h3>
+      </div>
+    </div>
+    <div class="card bg-light award-item">
+      <div class="card-body text-center">
+        <h4 class="card-title">WORLD CUP MEDALS</h4>
+        <h3 class="card-text display-4">17</h3>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div id="social-banner" class="text-center">
+  <h2 class="display-4">
+    <p>Lets Get Social!</p>
+    <a href="https://www.facebook.com/mellotholz" target="_blank"><i class="fab fa-facebook-square"></i></a>
+    <a href="https://www.instagram.com/mellotholz/?igshid=195jyjscp0t7" target="_blank"><i class="fab fa-instagram"></i></a>
+    
+    
+  </h2>
+
+
 
 </div>
 
