--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -5,6 +5,8 @@
     <head>
         <title>Melissa Lotholz</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="{% static 'mel_site/fontawesome-free-5.14.0-web/css/all.css' %}" rel="stylesheet"> <!--load all styles -->
+      
         <link href="{% static 'mel_site/styles.css' %}" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -50,5 +52,10 @@
             {% block body %}
             {% endblock %}
         </div>
+
+        <footer>
+          <p>Created by: Landon Thys</p>
+          <p>lthys@ualberta.ca</p>
+        </footer>
     </body>
 </html>
