--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -39,7 +39,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'store' %}">Store</a>
                 </li>
-
+                {% if user.is_authenticated %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create' %}">Edit Pages</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                  </li>
+                  {%endif%}
               </ul>
             </div>
           </nav>
