modified structure a bit

--- a/melissa/mel_site/templates/mel_site/get_involved.html
+++ b/melissa/mel_site/templates/mel_site/get_involved.html
@@ -4,9 +4,12 @@
 {% block body %}
 
 
-<div class="title">
-
-    <h1 class="display-1">GET INVOLVED</h1>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="title">GET INVOLVED</h1>
+      <p class="lead">Get information on how you can get involved</p>
+      
+    </div>
 </div>
 
 
@@ -19,4 +22,5 @@
 
 {% block script %}
 <link href="{% static 'mel_site/meet_styles.css' %}" rel="stylesheet">
+<link href="{% static 'mel_site/get-involved.css' %}" rel="stylesheet">
 {% endblock %}
