--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -4,12 +4,15 @@
 <html lang="en">
     <head>
         <title>Melissa Lotholz</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'mel_site/fontawesome-free-5.14.0-web/css/all.css' %}" rel="stylesheet"> <!--load all styles -->
       
         <link href="{% static 'mel_site/styles.css' %}" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
+        <script src="{% static 'mel_site/parallax.js' %}"></script>
         {% block script %}
         {% endblock %}
     </head>
