--- a/melissa/mel_site/static/mel_site/get-involved.css
+++ b/melissa/mel_site/static/mel_site/get-involved.css
@@ -13,9 +13,10 @@
       url('/static/mel_site/home_background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center;
     color:rgb(0, 0, 0) !important;
-    height: 70vh;
+    height: 90vh;
   }
   
   .page-scroll{
