--- a/melissa/mel_site/static/mel_site/speak-and-events.css
+++ b/melissa/mel_site/static/mel_site/speak-and-events.css
@@ -2,19 +2,21 @@
   --------------------------------------------- */
 
   .jumbotron{
-    margin:15px 30px 0px 30px;
-    border-radius:10px;
+    text-align: center;
+    margin:0px 0px 75px 0px;
+    
     background: 
-    linear-gradient(
-      rgba(255, 0, 0, 0.25), 
-      rgba(0, 0, 0, 0.45)
-    ),
+      linear-gradient(
+        rgba(255, 0, 0, 0.25), 
+        rgba(0, 0, 0, 0.45)
+      ),
       url('/static/mel_site/hear_story.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center;
     color:rgb(0, 0, 0) !important;
-    height: 70vh;
+    height: 90vh;
   }
   
   .page-scroll{
@@ -30,6 +32,9 @@
   }
   .lead{
     font-family:raleway;
-    font-weight:100;
+    font-size: 3vw;
     margin-top:-10px;
+  }
+  .title{
+    font-size: 7vw;
   }
