--- a/melissa/mel_site/templates/mel_site/index.html
+++ b/melissa/mel_site/templates/mel_site/index.html
@@ -10,11 +10,13 @@
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
+    <li data-target="#demo" data-slide-to="3"></li>
   </ul>
 
   <div class=""></div>
   <!-- The slideshow -->
   <div class="carousel-inner">
+
     <div class="carousel-item  active">
       <img class ="" src="/static/mel_site/home_background.jpg" alt="Bobsleigh Start">
       <div class="carousel-caption">
@@ -24,23 +26,38 @@
           </div>
       </div>
     </div>
+
     <div class="carousel-item">
+      <a href="/meet">
       <img src="/static/mel_site/hear_story.jpg" alt="Melissa holding plant">
       <div class="carousel-caption">
           <div class="background-img">
-              <h1 class="">HEAR | <i>THE STORY</i></h1>
+              <h1 class="">MEET MELISSA</h1>
           </div>
       </div>
-
+      </a>
     </div>
+
     <div class="carousel-item">
-      <img src="/static/mel_site/home_background.jpg" alt="Bobsleigh Start">
+      <a href="/involved">
+      <img src="/static/mel_site/hear_story.jpg" alt="Melissa holding plant">
       <div class="carousel-caption">
           <div class="background-img">
-              <h1 class="">MELISSA | <i>LOTHOLZ</i></h1>
-              <h2 class="">SLEIGH <i>all</i> DAY</h2>
+              <h1 class="">GET INVOLVED</h1>
           </div>
       </div>
+      </a>
+    </div>
+
+    <div class="carousel-item">
+      <a href="/speak">
+      <img src="/static/mel_site/tobaggan.jpg" alt="Bobsleigh Start">
+      <div class="carousel-caption">
+          <div class="background-img">
+              <h1 class="">SPEAKING & EVENTS</h1>
+          </div>
+      </div>
+      </a>
     </div>
   </div>
 
