--- a/melissa/mel_site/templates/mel_site/speak_events.html
+++ b/melissa/mel_site/templates/mel_site/speak_events.html
@@ -6,11 +6,19 @@
 
 
 <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-2">SPEAKING & EVENTS</h1>
-      <p class="lead">Get information on speaking and events</p>
-      
+  <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
+    <h1 class="title">GET READY TO BE INSPIRED</h1>
+    <h6 class="lead1 ">
+      Melissa’s passion for people and passion for personal growth and 
+      achievement are contagious. Whether it’s one on one or sharing her story 
+      with a large group, her honesty, sincerity, and experience are sure to 
+      change the room, impact and inspire.
+    </h6>
+    <div class="padding">
+      <button type="button" class="btn btn-light">BOOK MELISSA TODAY</button>
     </div>
+     
+  </div>
 </div>
 
 
