--- a/melissa/mel_site/templates/mel_site/get_involved.html
+++ b/melissa/mel_site/templates/mel_site/get_involved.html
@@ -5,15 +5,25 @@
 
 
 <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="title">GET INVOLVED</h1>
-      <p class="lead">Get information on how you can get involved</p>
-      
+  <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
+    <h1 class="title">THE #SLEIGHALLDAY MOVEMENT</h1>
+    <h6 class="lead1 ">Become part of the community and stay 
+      up to date on events and result via our E-letter.
+    </h6>
+    <div class="padding">
+      <button type="button" class="btn btn-light">NEWSLETTER SIGN-UP</button>
     </div>
+    <div class="padding">
+      <button type="button" class="btn btn-light">DONATE</button>
+    </div>
+    
+      
+  </div>
 </div>
 
 
-<div class="container">
+
+<div class="container text-center">
     {{content | safe}}
 </div>
     
