--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -11,14 +11,13 @@
         <link href="{% static 'mel_site/styles.css' %}" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
-        <script src="{% static 'mel_site/parallax.js' %}"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
         {% block script %}
         {% endblock %}
     </head>
     <body class="d-flex flex-column shrink-0">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="{% url 'index' %}">MELISSA | <i>LOTHOLZ</i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,7 +60,7 @@
 
         <footer class="footer mt-auto py-3">
           <div class="container">
-            <span class="text-muted">Created by Landon Thys</span>
+            <span class="text-muted float-right">Created by Landon Thys</span>
           </div>
         </footer>
     </body>
