--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -18,7 +18,13 @@
     <body class="d-flex flex-column shrink-0">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="{% url 'index' %}">MELISSA | <i>LOTHOLZ</i></a>
+            <a class="navbar-brand" href="{% url 'index' %}">
+              <img 
+                src="{% static 'mel_site/logoWhite2.svg' %}" 
+                alt="Melissa Lotholz Logo"
+                height="50"
+                width="200" />
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -59,8 +65,12 @@
         </div>
 
         <footer class="footer mt-auto py-3">
-          <div class="container">
-            <span class="text-muted float-right">Created by Landon Thys</span>
+          <div class="d-flex align-items-end flex-column  container">
+            <div class="p-1 text-muted">
+              Social <a href="https://www.juicer.io">powered by Juicer.io </a>
+            </div>
+            
+            <div class="p-1 text-muted">  Created by Landon Thys</div>
           </div>
         </footer>
     </body>
