--- a/melissa/mel_site/templates/mel_site/login.html
+++ b/melissa/mel_site/templates/mel_site/login.html
@@ -4,9 +4,9 @@
 
 
 
-    <div class="container">
+    <div class="pt-5 container ">
 
-        <h2>Login</h2>
+        <h2 class="pt-5">Login</h2>
 
         {% if message %}
             <div>{{ message }}</div>
@@ -22,7 +22,7 @@
             </div>
             <input class="btn btn-primary" type="submit" value="Login">
         </form>
-        Don't have an account? <a href="">To bad. This is  just for admins</a>
+        Don't have an account? To bad. This is  just for admins
     </div>
 
 
