--- a/melissa/mel_site/templates/mel_site/adminLayout.html
+++ b/melissa/mel_site/templates/mel_site/adminLayout.html
@@ -69,8 +69,59 @@
           </nav>
         
         <div class="body">
+          <div class="row">
+            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+              <div class="sidebar-sticky">
+                
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
+                         Edit Pages</span>
+                </h6>
+                <ul class="nav flex-column">
+        
+        
+        
+                  {% for page in pages %}
+                  <li><a href="{% url 'edit' page %}"></a> </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'edit' page %}">
+                        {{page}} <span class="sr-only"></span>
+                    </a>
+                  </li>
+                  {% endfor %}
+        
+        
+                </ul>
+        
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                  <span>Pictures</span>
+                </h6>
+                <ul class="nav flex-column mb-2">
+        
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'upload'%}">Upload Pictures</a>
+                  </li>
+        
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'view'%}">View Pictures</a>
+                  </li>
+        
+                </ul>
+              </div>
+            </nav>
+        
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+              
             {% block body %}
             {% endblock %}
+        
+                
+        
+            </main>
+          </div>
+
+
+
         </div>
 
         <footer class="footer mt-auto py-3">
