--- a/melissa/mel_site/templates/mel_site/home.html
+++ b/melissa/mel_site/templates/mel_site/home.html
@@ -1,12 +1,14 @@
 {%  extends "mel_site/layout.html" %}
+
 {% load static %}
 
 {% block body %}
 
 <div class="jumbotron jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
-    <h1 class="title">MELISSA |<i>LOTHOLZ</i> </h1>
-    <h6 class="lead1 ">SLEIGH <i>all</i> DAY</h6>  
+    <img 
+    src="{% static 'mel_site/MLSADwhite.svg' %}" 
+    alt="Melissa Lotholz Logo"/>
   </div>
 </div>
 
@@ -65,7 +67,7 @@
 <div id="social-posts" class="container">
   <script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
   <link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
-  <ul class="juicer-feed" data-feed-id="landonthighs" data-per="6"></ul>
+  <ul class="juicer-feed" data-feed-id="landonthighs" data-per="3"></ul>
 </div>
 
 
@@ -77,11 +79,43 @@
       up to date on events and result via our E-letter.
     </h6>
     <div class="padding">
-      <button type="button" class="btn btn-light">NEWSLETTER SIGN-UP</button>
+      <button type="button" class="btn btn-light" data-toggle="modal" data-target="#SignUpModal">NEWSLETTER SIGN-UP</button>
     </div>
       
   </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="SignUpModalLabel">Newsletter Sign-Up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div id="mc_embed_signup">
+              <form action="https://gmail.us20.list-manage.com/subscribe/post?u=96011a2266376d2523203661f&amp;id=a5188df2ab" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_96011a2266376d2523203661f_a5188df2ab" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+              </form>
+              </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
 <div id="sponsors" class="container space text-center">
   <h2>IT TAKES A TEAM </h2>
@@ -112,6 +146,8 @@
 
 
 {% endblock %}
+
+
 
 {% block script %}
 <link href="{% static 'mel_site/home_styles.css' %}" rel="stylesheet">
