--- a/melissa/mel_site/templates/mel_site/picture_view.html
+++ b/melissa/mel_site/templates/mel_site/picture_view.html
@@ -46,6 +46,6 @@
 {% endblock %}
 
 {% block script %}
-<link href="{% static 'mel_site/home_styles.css' %}" rel="stylesheet">
+<link href="{% static 'mel_site/styles/home_styles.css' %}" rel="stylesheet">
 
 {% endblock %}
