--- a/melissa/mel_site/static/mel_site/styles/meet_styles.css
+++ b/melissa/mel_site/static/mel_site/styles/meet_styles.css
@@ -1,3 +1,5 @@
+
+
  /* Parallax base styles
   --------------------------------------------- */
 
@@ -10,7 +12,7 @@
         rgba(0, 0, 0, 0.55), 
         rgba(0, 0, 0, 0.55)
       ),
-      url('/static/mel_site/home_background.jpg');
+      url('/static/mel_site/pictures/meet_mel_title.jpeg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -18,5 +20,10 @@
     color:rgb(230, 230, 230) !important;
     height: 90vh;
   }
+
+
+
+
+
 
 
