--- a/melissa/mel_site/templates/mel_site/create.html
+++ b/melissa/mel_site/templates/mel_site/create.html
@@ -61,6 +61,6 @@
 {% endblock %}
 
 {% block script %}
-<link href="{% static 'mel_site/home_styles.css' %}" rel="stylesheet">
+<link href="{% static 'mel_site/styles/home_styles.css' %}" rel="stylesheet">
 
 {% endblock %}
