--- a/melissa/mel_site/templates/mel_site/get_involved.html
+++ b/melissa/mel_site/templates/mel_site/get_involved.html
@@ -60,6 +60,6 @@
 {% endblock %}
 
 {% block script %}
-<link href="{% static 'mel_site/meet_styles.css' %}" rel="stylesheet">
-<link href="{% static 'mel_site/get-involved.css' %}" rel="stylesheet">
+
+<link href="{% static 'mel_site/styles/get-involved.css' %}" rel="stylesheet">
 {% endblock %}
