--- a/melissa/mel_site/templates/mel_site/home.html
+++ b/melissa/mel_site/templates/mel_site/home.html
@@ -7,7 +7,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
     <img 
-    src="{% static 'mel_site/MLSADwhite.svg' %}" 
+    src="{% static 'mel_site/pictures/MLSADwhite.svg' %}" 
     alt="Melissa Lotholz Logo"/>
   </div>
 </div>
@@ -150,5 +150,5 @@
 
 
 {% block script %}
-<link href="{% static 'mel_site/home_styles.css' %}" rel="stylesheet">
+<link href="{% static 'mel_site/styles/home_styles.css' %}" rel="stylesheet">
 {% endblock %}
