--- a/melissa/mel_site/templates/mel_site/layout.html
+++ b/melissa/mel_site/templates/mel_site/layout.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'mel_site/fontawesome-free-5.14.0-web/css/all.css' %}" rel="stylesheet"> <!--load all styles -->
       
-        <link href="{% static 'mel_site/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'mel_site/styles/styles.css' %}" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="{% url 'index' %}">
               <img 
-                src="{% static 'mel_site/logoWhite2.svg' %}" 
+                src="{% static 'mel_site/pictures/logoWhite2.svg' %}" 
                 alt="Melissa Lotholz Logo"
                 height="50"
                 width="200" />
