--- a/melissa/mel_site/templates/mel_site/store.html
+++ b/melissa/mel_site/templates/mel_site/store.html
@@ -10,5 +10,5 @@
 {% endblock %}
 
 {% block script %}
-<link href="{% static 'mel_site/home_styles.css' %}" rel="stylesheet">
+<link href="{% static 'mel_site/styles/home_styles.css' %}" rel="stylesheet">
 {% endblock %}
