--- a/melissa/mel_site/templates/mel_site/home.html
+++ b/melissa/mel_site/templates/mel_site/home.html
@@ -20,25 +20,25 @@
     <div class="card bg-light award-item">
       <div class="card-body text-center">
         <h4 class="card-title">OLYMPICS</h4>
-        <h3 class="card-text display-4">1</h3>
+        <h3 class="card-text ">1</h3>
       </div>
     </div>
     <div class="card bg-light award-item">
       <div class="card-body text-center">
         <h4 class="card-title">CRSYTAL GLOBES</h4>
-        <h3 class="card-text display-4">4</h3>
+        <h3 class="card-text ">4</h3>
       </div>
     </div>
     <div class="card bg-light award-item">
       <div class="card-body text-center">
         <h4 class="card-title">WORLD CHAMPS MEDALS</h4>
-        <h3 class="card-text display-4">2</h3>
+        <h3 class="card-text ">2</h3>
       </div>
     </div>
     <div class="card bg-light award-item">
       <div class="card-body text-center">
         <h4 class="card-title">WORLD CUP MEDALS</h4>
-        <h3 class="card-text display-4">17</h3>
+        <h3 class="card-text">17</h3>
       </div>
     </div>
   </div>
@@ -49,7 +49,9 @@
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
     <h1 class="title">From farm to podium</h1>
     <div class="padding">
-      <button type="button" class="btn btn-light">Meet Melissa</button>
+      <a href="{% url 'meet' %}">
+        <button type="button" class="btn btn-light">Meet Melissa</button>
+      </a>
     </div>
   </div>
 </div>
