--- a/melissa/mel_site/templates/mel_site/home.html
+++ b/melissa/mel_site/templates/mel_site/home.html
@@ -69,7 +69,11 @@
 <div id="social-posts" class="container">
   <script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
   <link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
-  <ul class="juicer-feed" data-feed-id="landonthighs" data-per="3"></ul>
+  <ul class="juicer-feed" data-feed-id="mellotholz" data-per="3" data-truncate="200">
+    <h1 class="referral">
+      <a href="https://www.juicer.io">Powered by Juicer.io</a>
+    </h1>
+  </ul>
 </div>
 
 
