Edited styles, and fixed clipping from #sleighallday

--- a/melissa/mel_site/templates/mel_site/get_involved.html
+++ b/melissa/mel_site/templates/mel_site/get_involved.html
@@ -6,7 +6,7 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
-    <h1 class="title">THE #SLEIGHALLDAY MOVEMENT</h1>
+    <h1 class="title2">THE #SLEIGHALLDAY MOVEMENT</h1>
     <h6 class="lead1 ">Become part of the community and stay 
       up to date on events and result via our E-letter.
     </h6>
