--- a/melissa/mel_site/templates/mel_site/home.html
+++ b/melissa/mel_site/templates/mel_site/home.html
@@ -47,7 +47,7 @@
 
 <div class="jumbotron-meet jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
-    <h1 class="title">From farm to podium</h1>
+    <h1 class="title">FROM FARM TO PODIUM</h1>
     <div class="padding">
       <a href="{% url 'meet' %}">
         <button type="button" class="btn btn-light">Meet Melissa</button>
@@ -80,7 +80,7 @@
 
 <div class="jumbotron-join jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
-    <h1 class="title">THE #SLEIGHALLDAY MOVEMENT</h1>
+    <h2 class="title2">JOIN THE #SLEIGHALLDAY MOVEMENT</h2>
     <h6 class="lead1 ">Become part of the community and stay 
       up to date on events and result via our E-letter.
     </h6>
