updated header text formatting and some markdown content

--- a/melissa/mel_site/templates/mel_site/meet_mel.html
+++ b/melissa/mel_site/templates/mel_site/meet_mel.html
@@ -9,11 +9,14 @@
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
     <h1 class="title">MEET MELISSA</h1>
     <h6 class="lead1 ">
-      Pushing a sled has pushed me as a person. 
-      I have grown deeper and achieved higher than 
-      I thought possible because of this crazy sport. 
-      And, I have had the honour of inspiring and partnering with others 
-      along the way. For me, that’s true gold.
+      <p>
+        Pushing a sled has pushed me as a person. 
+        I have grown deeper and achieved higher than 
+        I thought possible because of this crazy sport. 
+        And, I have had the honour of inspiring and partnering with others 
+        along the way. For me, that’s true gold.
+      </p>
+
     </h6>
 
      
@@ -22,7 +25,7 @@
 
 
 
-<div class="container">
+<div class="container markdown">
     {{content | safe}}
 </div>
 
