--- a/melissa/mel_site/static/mel_site/styles/styles.css
+++ b/melissa/mel_site/static/mel_site/styles/styles.css
@@ -17,12 +17,14 @@ body{
 .title{
   font-size: calc(20px + 2vw);
   margin-top: 50px;
+  margin-bottom: 20px;
   text-align: center;
 }
 .title2{
   font-size: calc(10px + 2vw);
   margin-top: 50px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .edit{
@@ -33,6 +35,10 @@ body{
   padding: 20px;
 }
 
+.markdown img{
+  width: 100%;
+  height: auto;
+}
 
 
 .image-container{
