--- a/melissa/mel_site/templates/mel_site/get_involved.html
+++ b/melissa/mel_site/templates/mel_site/get_involved.html
@@ -6,10 +6,12 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
-    <h1 class="title2">THE #SLEIGHALLDAY MOVEMENT</h1>
-    <h6 class="lead1 ">Become part of the community and stay 
-      up to date on events and result via our E-letter.
-    </h6>
+    <h1 class="title">GET INVOLVED</h1>
+
+    <h2 class="title 2">
+      <i>THE #SLEIGHALLDAY MOVEMENT</i>
+
+    </h2>
     <div class="padding">
       <button type="button" class="btn btn-light" data-toggle="modal" data-target="#SignUpModal">NEWSLETTER SIGN-UP</button>
     </div>
@@ -51,7 +53,7 @@
 
 
 
-<div class="container text-center">
+<div class="container markdown">
     {{content | safe}}
     
 </div>
