--- a/melissa/mel_site/templates/mel_site/speak_events.html
+++ b/melissa/mel_site/templates/mel_site/speak_events.html
@@ -7,13 +7,11 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
-    <h1 class="title">GET READY TO BE INSPIRED</h1>
-    <h6 class="lead1 ">
-      Melissa’s passion for people and passion for personal growth and 
-      achievement are contagious. Whether it’s one on one or sharing her story 
-      with a large group, her honesty, sincerity, and experience are sure to 
-      change the room, impact and inspire.
-    </h6>
+    <h1 class="title">SPEAKING AND EVENTS</h1>
+    <h2 class="title ">
+      <i>Get Ready To Be Inspired</i>
+
+    </h2>
     <div class="padding">
       <button type="button" class="btn btn-light">BOOK MELISSA TODAY</button>
     </div>
@@ -23,7 +21,7 @@
 
 
 
-<div class="container">
+<div class="container markdown">
     {{content | safe}}
 </div>
 
