Updated the model to spereate images and sponsors

--- a/melissa/mel_site/templates/mel_site/adminLayout.html
+++ b/melissa/mel_site/templates/mel_site/adminLayout.html
@@ -61,6 +61,9 @@
                     <a class="nav-link" href="{% url 'create' %}">Edit Pages</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="/admin">Admin</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                   </li>
                   {%endif%}
