--- a/melissa/mel_site/templates/mel_site/picture_view.html
+++ b/melissa/mel_site/templates/mel_site/picture_view.html
@@ -5,25 +5,7 @@
 
 <div class="container text-center">
 
-
-    <h1 class="m-3">Sponsor Logos</h1>
-
-    <div class="d-flex justify-content-center">
-        {% for sponsor in logos %}
-        <div class="m-2 p-1 card" style="width:400px">
-            
-            <img class="card-img-top" src="{{ sponsor.image.url }}" alt="{{sponsor.name}} Logo"> 
-            <div class="card-body">
-            <h4 class="card-title">{{sponsor.name}}</h4>
-            <p class="card-text">{{ sponsor.image.url }}</p>
-            
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-
     <h1 class="m-3">Uploaded Images</h1>
-
     <div class="d-flex justify-content-center">
         {% for sponsor in images %}
         <div class="m-2 p-1 card" style="width:400px">
@@ -37,6 +19,58 @@
         </div>
         {% endfor %}
     </div>
+
+    <h1 class="m-3">Sponsor Logos Tier 1</h1>
+
+    <div class="d-flex justify-content-center">
+        {% for sponsor in logos1 %}
+        <div class="m-2 p-1 card" style="width:400px">
+            
+            <img class="card-img-top" src="{{ sponsor.image.url }}" alt="{{sponsor.name}} Logo"> 
+            <div class="card-body">
+            <h4 class="card-title">{{sponsor.name}}</h4>
+            <p class="card-text">{{ sponsor.image.url }}</p>
+            
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <h1 class="m-3">Sponsor Logos Tier 2</h1>
+
+    <div class="d-flex justify-content-center">
+        {% for sponsor in logos2 %}
+        <div class="m-2 p-1 card" style="width:400px">
+            
+            <img class="card-img-top" src="{{ sponsor.image.url }}" alt="{{sponsor.name}} Logo"> 
+            <div class="card-body">
+            <h4 class="card-title">{{sponsor.name}}</h4>
+            <p class="card-text">{{ sponsor.image.url }}</p>
+            
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <h1 class="m-3">Sponsor Logos Tier 3</h1>
+
+    <div class="d-flex justify-content-center">
+        {% for sponsor in logos3 %}
+        <div class="m-2 p-1 card" style="width:400px">
+            
+            <img class="card-img-top" src="{{ sponsor.image.url }}" alt="{{sponsor.name}} Logo"> 
+            <div class="card-body">
+            <h4 class="card-title">{{sponsor.name}}</h4>
+            <p class="card-text">{{ sponsor.image.url }}</p>
+            
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    
+
+
 
 </div>
 
