--- a/melissa/mel_site/templates/mel_site/speak_events.html
+++ b/melissa/mel_site/templates/mel_site/speak_events.html
@@ -20,55 +20,64 @@
 </div>
 
 
-<div class="modal fade" id="ContactModal" tabindex="-1" role="dialog" aria-labelledby="contactLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="contactLabel">Book Melissa</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-          <div id="mc_embed_signup">
-            <form class="form-signin" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd23RF_TiNmjcbilNzSUsOPZb2pShs_eM7knDOeV2Ek5f_ITw/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;">
 
-              <p>Whether it's inquiring about speaking, events, the sport of bobsleigh or something else, I'm looking forward to getting in touch! </p>
-        
-
-              <div class="form-label-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="entry.1441847631" class="form-control" placeholder="Name" required="">
-                
-              </div>
-
-              <div class="form-label-group">
-                <label for="inputEmail">Email address</label>
-                <input type="email" id="inputEmail" name="entry.743423113" class="form-control" placeholder="Email address" required="" autofocus="">
-                
-              </div>
- 
-              <div class="form-label-group">
-                <label for="message">Message</label>
-                <p><i>If inquiring about events / speaking please include the details of your event such as organization, preferred dates, event type etc.</i></p>
-                <textarea rows="5" type="text" id="message" name="entry.1347213954" class="form-control" placeholder="Message" required=""></textarea>
-                
-              </div>
-
-
-              <button class="btn btn-lg btn-dark btn-block" type="submit">Send</button>
-            </form>
-              </div>
-      </div>
-
-    </div>
-  </div>
-</div>
 
 
 
 <div class="container markdown">
     {{content | safe}}
+</div>
+
+
+
+<div class="container">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/static/mel_site/pictures/WECAref.png" alt="First slide">
+        <div class="carousel-caption">
+          <div class="p-2 bg-dark">
+            <h5>Melissa is gifted at sharing her story. 
+              She is sincere, humorous, and I couldn’t stop taking notes as 
+              she shared so much wisdom. 
+              Women were talking after the event about how Melissa 
+              inspired them and they were so proud to have a local 
+              girl achieve so much for Canada and women! Thank you.</h5>
+            <p><i>Janelle Given, West Edmonton Christian Assembly</i></p>
+          </div>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/static/mel_site/pictures/Shepcare.jpg" alt="Second slide">
+        <div class="carousel-caption">
+          <div class="p-2 bg-dark">
+            <h5>Melissa was an integral part of our fundraising event. She is most engaging, connects really well with the audience, and contributed significantly to the positive atmosphere at the event.. prior to the Cake Auction she spent the afternoon visiting with many seniors who call our facility home, and doing a “Show & Tell” about her Bobsleigh career. The Seniors loved it!</h5>
+            <p><i>Wilfred Golbec, Shepherd’s Care Foundation</i></p>
+          </div>
+
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/static/mel_site/pictures/AthabascaRef.jpg" alt="Third slide">
+        <div class="carousel-caption">
+          <div class="p-2 bg-dark">
+            <h5>Melissa is energetic, positive, realistic, and a fantastic role model for young people! She personalized her presentations for our small rural school and was awesome at connecting with all ages. She had our younger elementary kids jumping up and down and repeating positive mantras. Her pictures and stories of her journey from small town Barrhead to the International Bobsled circuit and participation in the 2018 Winter Olympics captured our hearts.. I highly recommend Melissa as a speaker for schools of all ages.</h5>
+            <p><i>Lorna Hiemstra, Principal, Fort Assiniboine School</i></p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
 
 
