--- a/melissa/mel_site/static/mel_site/styles/speak-and-events.css
+++ b/melissa/mel_site/static/mel_site/styles/speak-and-events.css
@@ -25,7 +25,27 @@
     height: 90vh;
   }
   
+.background-img{
+  background: 
+  linear-gradient(
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0.75)
+  );
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  color: white;
+  border-radius: 5px;
+  padding:5px;
+    
+    
+}
 
+.carousel-caption {
+  position: relative;
+  left: auto;
+  right: auto;
+}
 
 
 
